--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.1",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.6.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6"
@@ -19,6 +22,8 @@
     "@types/expo": "^32.0.9",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.10",
+    "@types/react-native-vector-icons": "^6.4.0",
+    "@types/react-navigation": "^3.0.6",
     "@types/react-redux": "^7.0.6",
     "@types/react-test-renderer": "^16.8.1",
     "@types/redux": "^3.6.0",
