--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "types": ["jest"]
+    "types": ["jest"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   }
 }
