--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-image-header-scroll-view": "^0.10.1",
+    "react-native-maps": "^0.24.2",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
