--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.1",
     "axios": "^0.18.0",
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "expo": "^39.0.5",
+    "react": "^17.0.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-image-header-scroll-view": "^0.10.1",
-    "react-native-maps": "^0.24.2",
+    "react-native-maps": "^0.27.1",
+    "react-native-screens": "^2.15.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
@@ -25,19 +27,19 @@
   "devDependencies": {
     "@types/expo": "^32.0.9",
     "@types/jest": "^24.0.11",
-    "@types/react": "^16.8.10",
+    "@types/react": "^16.9.49",
     "@types/react-native-vector-icons": "^6.4.0",
     "@types/react-navigation": "^3.0.6",
     "@types/react-redux": "^7.0.6",
-    "@types/react-test-renderer": "^16.8.1",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/redux": "^3.6.0",
     "jest": "^24.7.0",
-    "jest-expo": "^32.0.0",
+    "jest-expo": "39.0.0",
     "react-test-renderer": "^16.8.6",
     "ts-jest": "^24.0.1",
     "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.4.1"
+    "typescript": "^3.9.7"
   },
   "private": true,
   "jest": {
