--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.1",
+    "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.18.0",
     "expo": "^39.0.5",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-gesture-handler": "^1.9.0",
@@ -20,7 +22,7 @@
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6"
   },
@@ -39,6 +41,7 @@
     "ts-jest": "^24.0.1",
     "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.7"
   },
   "private": true,
